--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,8 @@ pool: poolagentself
 
 variables:
   # Azure Resource Manager connection created during pipeline creation
-  azureServiceConnectionId: "azzuredevopsconnection"
+  azureServiceConnectionId: "azuredevopsconnection"
+  
 
   # Web app name
   webAppName: "azuredevops-xpander"
